--- a/src/components/Header/styleButton.css
+++ b/src/components/Header/styleButton.css
@@ -6,8 +6,8 @@
     align-items: center;
     padding: 10px;
     border-radius: 25px;
-
-    outline: none;
+    border: none;
+    outline: 0px;
     transition: 0.5s ease;
     margin-bottom: 5vh;
 }
@@ -15,27 +15,16 @@
 .SunAndMoon:hover {
     background-color: rgb(255, 0, 0);
 }
-.meu-botao {
-  background: transparent;
-  border: none;
-  outline: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  position: relative; /* necessário para posicionar a linha */
+button {
+    width: 25%;
+    height: 50%;
+    margin: 20px 0 0 0;
+    border: none;
+    outline: 0px;
+    transition: 0.5s ease;
 }
 
-.meu-botao::after {
-  content: "";
-  position: absolute;
-  left: 50%; /* começa no centro */
-  bottom: 0; /* fica embaixo do botão */
-  width: 0; /* começa sem largura */
-  height: 2px;
-  background-color: #756ED9;
-  transition: all 0.3s ease;
-}
 
-.meu-botao:hover::after {
-  left: 0;   /* vai para a esquerda */
-  width: 100%; /* cresce até cobrir toda a largura */
+button:hover {
+    background-color: rgb(106, 136, 136);
 }
